🎨 تحديث ألوان الحالات الموحدة في جميع الأقسام - الحالات المكتملة أخضر، قيد الانتظار برتقالي، غير مجدول فضي، مجدولة أزرق فاتح، ملغية أحمر

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,12 @@
     <!-- Custom Theme Enhancements -->
     <link rel="stylesheet" href="{% static 'css/custom-theme-enhancements.css' %}">
 
+    <!-- Unified Status System CSS -->
+    <link rel="stylesheet" href="{% static 'css/unified-status-system.css' %}">
+    
+    <!-- Unified Status Colors CSS -->
+    <link rel="stylesheet" href="{% static 'css/unified-status-colors.css' %}">
+
     <!-- Google Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
 
